fix(ww): tweak search filter mobile sizes to be more readable, change sticky tags order

--- a/wordweb-app/src/main/resources/scss/pages/_search.scss
+++ b/wordweb-app/src/main/resources/scss/pages/_search.scss
@@ -549,9 +549,13 @@
     border: 1px solid var(--color-bluish-gray);
     box-shadow: 0px 2px 2px 0px #0000001A;
 
+    &--small {
+      width: auto;
+    }
+
     @include media-breakpoint-down(md) {
       grid-template-columns: 1fr;
-      width: auto;
+      grid-auto-flow: row;
     }
 
     &.show {
